# bluearchive-torment-data

./: .gitignore  Readme.md  character.json  download_csv.py  main-dev.py  parse_character.py  parse_party.py  parse_party_before_s63.py  pyproject.toml
.github/: sync.yml
.github/workflows/: sync-data.yml
app/: constants.py  oracle.py
app/parse/: character.py  party.py  rank.py
other/: constant.js
sql/: create_table.sql
